SUBDIRS = common client contractor intermediary receptionist server worker common/test

TESTS = common/test/test

dist_doc_DATA = README

dist_bin_SCRIPTS  = scripts/client-contractor.sh
dist_bin_SCRIPTS += scripts/client-server.sh
dist_bin_SCRIPTS += scripts/client-worker.sh
dist_bin_SCRIPTS += scripts/common.sh
dist_bin_SCRIPTS += scripts/run_all.sh
